--- a/static/css/htql-suggestions.css
+++ b/static/css/htql-suggestions.css
@@ -30,3 +30,11 @@
 .d-none {
     display: none !important;
 }
+
+.validation-indicator {
+    cursor: help;
+}
+
+.input-group .form-control {
+    padding-right: 30px;
+}
